# noorinalabs-isnad-graph

./: .coverage  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/hooks/: validate_commit_identity.py
.claude/team/: charter.md  feedback_log.md  roster.json  trust_matrix.md
.githooks/: commit-msg
.github/workflows/: ci.yml  deploy.yml  ghcr-publish.yml  pipeline.yml
.hypothesis/constants/: 027b9c968d1ea80d  0824f6a9c9787637  108a71624de8dfe9  1679a83dc36dc33c  18ebcdb8548c1281  1e04230f247b006d  1e684ecda91ddb02  2134ef4083eb83b3  2c29920d1cafacb9  2f1eb5e3c9d22786  32c04657f112dc24  35dafc16bd39db96  38188c5dadf7c0e7  3b3c5dc51dd97195  3d7225ee9d912568  4197071039f0568d  48be8f15b7de1aea  49c5ed7a9389af72  4a36571d526faa78  4b7261721cca1cd9  5968ff7d60f30e58  5dbd80de9f50d53e  5eef0695ad888684  60245ac444199419  65a3b6bc664f6b7d  6749a8a708dd076a  68561a1b40c6c950  6bea330f5bab5d86  7099102a57cf5de0  7157d0db7b9bb0d4  7388b6d9b87c7cb1  73a1f3689c103fc6  80297cbc5a9203e2  84772b26ea0e66fb  9d65b7270baf01a3  9df4a71dba0c9141  a7d713e4f082ab97  af1545e0779a5622  b3f7a273f0ce3135  baaba710526f9aa1  (+24 more)
docs/: ops-url-guide.md
docs/deployment/: dns-setup.md  pipeline-bootstrap.md  rollback-test.md
frontend/: .npmrc  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/public/: theme-init.js
frontend/src/: App.tsx
queries/migrations/: remove_user_nodes.cypher
scripts/: b2_download.sh  b2_upload.sh  bootstrap-vps.sh  data_profile.py  lockfile_no_local_paths.sh  restore.sh  run_full_pipeline.sh  sample_real_data.py
src/: cli.py  config.py
src/acquire/: __init__.py  thaqalayn.py
src/api/: app.py  middleware.py  models.py
src/auth/: __init__.py  jwks.py  migrate_users.py  models.py  pg_users.py  providers.py  sessions.py  tokens.py
src/enrich/: __init__.py  historical.py
src/graph/: load_edges.py  load_nodes.py  validate.py
src/models/: enrich.py
src/parse/: __init__.py  lk_corpus.py  muhaddithat.py  open_hadith.py  thaqalayn.py  validate.py
src/resolve/: __init__.py  dedup.py  disambiguate.py  ner.py
src/utils/: __init__.py  logging.py  neo4j_client.py  pg_client.py
terraform/: main.tf  variables.tf
tests/: conftest.py  test_config.py
tests/e2e/: conftest.py
tests/integration/: test_api_endpoints.py  test_cross_service_auth.py
tests/test_api/: conftest.py  test_admin.py  (+3 more)
(+77 files in other folders)
